# tree2guide

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: _config.yml  api.md  changelog.md  cli.md  contributing.md  examples.md  index.md  installation.md  quickstart.md  tested_environments.md  tree2ignore.md  v1.0.0_SHORT_PLAN.md
release/v1.2.0/: PRODUCTION_NOTES.md  RELEASE_CHECKLIST.md  REVIEW.md  TEST_CASES.md
src/tree2guide/: __init__.py  cli.py  ignore.py  llm.py  scanner.py
src/tree2guide/renderers/: __init__.py  html.py  json_renderer.py  llm.py  markdown.py  text.py  yaml_renderer.py
tests/: test_cli.py  test_ignore.py  test_llm.py  test_markdown_renderer.py  test_renderers.py  test_scanner.py
