[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tree2guide"
version = "1.2.0"
description = "See your project structure clearly — a tree generator with gitignore-compatible exclusion, multi-format output, and AI-ready summaries."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Lawrence Roble" }
]
requires-python = ">=3.9"
keywords = ["tree", "markdown", "documentation", "cli", "gitignore", "project-structure", "json", "yaml", "html", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/law4percent/tree2guide"
Repository = "https://github.com/law4percent/tree2guide"
Issues = "https://github.com/law4percent/tree2guide/issues"
Documentation = "https://law4percent.github.io/tree2guide/"

[project.scripts]
tree2guide = "tree2guide.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]